# basalt

./: .gitignore  AGENT.md  BASALT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.test  Makefile.toml  README.md  docker-compose.test.yml
.github/workflows/: ci.yml
docs/: DOCKER_TESTING.md  QUICK_REFERENCE.md  TESTING_STRATEGY.md
scripts/: install-hooks.sh  test-docker.sh
scripts/hooks/: pre-commit  pre-commit-light
src/: error.rs  main.rs
src/cli/: init.rs  mod.rs
src/core/: environment.rs  git.rs  metadata.rs  mod.rs
src/providers/: github.rs  gitlab.rs  gitlab_api.rs  mock.rs  mod.rs
tests/: environment_tests.rs  init_tests.rs
