[package]
name = "bt"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["basalt contributors"]
description = "A multi-provider CLI for managing stacked Git workflows"
readme = "README.md"
homepage = "https://github.com/natoandro/basalt"
repository = "https://github.com/natoandro/basalt"
license-file = "LICENSE"
keywords = ["git", "cli", "workflow", "stack", "merge-request"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
toml = "0.9"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "bt"
path = "src/main.rs"
